--- a/message_room_application_ui/src/App.css
+++ b/message_room_application_ui/src/App.css
@@ -32,7 +32,45 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+
+html,
+body {
+  margin: 0;
+}
+
+.topbar {
+  background-color: rgb(223, 219, 219);
+}
+
+#main_application {
+  height: 100vh;
+  width: 100vw;
+
+  background-color: #61dafb;
+}
+
+.widthFull{
+  width: 100%
+}
+
+.heightFull{
+  height: 100%;
+}
+
+.chat-container{
+  background-color: rgb(255, 242, 127);
+}
+
+.chatsView{
+  background-color: rgb(228, 218, 218);
+}
+
+.chatView{
+  background-color: rgb(114, 106, 94);
 }
